--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -92,9 +92,9 @@ jobs:
 
       - name: Check the Attestation result
         run: |
-          # Inspect the resulting bundle:
-          bnd inspect ampel.intoto.json 
-          # Extract the in-toto attestation from the bundle
+          echo "Inspect the resulting bundle ..."
+          bnd inspect ampel.intoto.json
+          echo "Extract the in-toto attestation from the bundle ..."
           bnd extract attestation ampel.intoto.json
-          # Extract the predicate data from the bundle
+          echo "Extract the predicate data from the bundle ..."
           bnd extract predicate ampel.intoto.json
